2009-02-10  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Cleanup: turn static data into
	  instance data (for future Threading changes, as only static data
	  will be tracked for thread-safety); use MDocCommand.Message() and
	  MDocCommand.Error() for message reporting; remove warnings.

2009-01-05  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Fix $(PROGRAM) dependencies so that mdoc.exe is rebuilt
	  when one of the dependent ../monodoc/Resources/* files is changed.

2009-01-05  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/mdoc.cs: `mdoc' (no arguments) shouldn't print an
	  index out of range error.  Fix.
	* Mono.Documentation/monodocer.cs: Rename -fno-member-assembly-info to
	  -fno-assembly-versions, which prevents generation of //AssemblyVersion
	  elements.  This suffers the same warning as -fno-member-assembly-info,
	  so don't use unless you can guarantee that no members will 
	  ever be removed from your public API. :-)
	  Clean up -f handling so that -f:no-assembly-versions will work as
	  expected.

2009-01-05  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Add -fno-member-assembly-info,
	  which remove /Type/Members/Member/AssemblyInfo elements.
	  Requested by Mike Kestner.
	  Warning: this option will break automatic version tracking, so if a
	  member is present in e.g. v1.0 and is removed in e.g. v2.0, 
	  the //Member element will be removed entirely when updating the
	  documentation against the 2.0 assembly.  Use with care.

2008-12-06  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Remove "exception" from DocsNodeOrder
	  so that <exception/> elements aren't grouped together.  This causes
	  `make doc-update` to result in ~0 changes in ../../class/corlib.
	  Change the sorting of --exceptions-generated <exception/> nodes so
	  that namespaces are taken into consideration, thus "properly"
	  grouping types by namespaces, as I'd usually expect...
